--- a/admin/templates/user_info.htm
+++ b/admin/templates/user_info.htm
@@ -7,6 +7,10 @@
     <td class="label">{$lang.username}:</td>
     <td>{if $form_action eq "update"}{$user.user_name}<input type="hidden" name="username" value="{$user.user_name}" />{else}<input type="text" name="username" maxlength="60" value="{$user.user_name}" />{$lang.require_field}{/if}</td>
   </tr>
+  <tr>
+    <td class="label">昵称:</td>
+    <td>{if $form_action eq "update"}{$user.nickname}<input type="hidden" name="nickname" value="{$user.nickname}" />{else}<input type="text" name="nickname" maxlength="60" value="{$user.nickname}" />{$lang.require_field}{/if}</td>
+  </tr>
   {if $form_action eq "update"}
   <tr>
     <td class="label">{$lang.user_money}:</td>
